--- a/episodes/166-are-ai-alarmists-right.njk
+++ b/episodes/166-are-ai-alarmists-right.njk
@@ -2,7 +2,7 @@
 layout: episode
 number: 166
 title: Are AI Alarmists Right?
-description: Brian and Melissa discuss the present capabilities and future possibilities of ChatGPT and its artificial "intelligence" brethren.
+description: Brian and Melissa discuss the present capabilities and future possibilities of ChatGPT and its artificial "intelligence" brethren, and how alarmists may be wrong with their predictions but right with their warnings.
 date: 2023-05-19
 hosts:
   - Brian
