--- a/episodes/167-they-descended-into-hell-feat-matt-koser.njk
+++ b/episodes/167-they-descended-into-hell-feat-matt-koser.njk
@@ -2,7 +2,7 @@
 layout: episode
 number: 167
 title: They Descended Into Hell FEAT. Matt Koser
-description: Brian and his brother Matt discuss three Christian theological views of hell: infernalism, annihilationism, and universalism.
+description: "Brian and his brother Matt discuss three Christian theological views of hell: infernalism, annihilationism, and universalism."
 date: 2023-05-26
 hosts:
   - Brian
