--- a/episodes/167-they-descended-into-hell-feat-matt-koser.njk
+++ b/episodes/167-they-descended-into-hell-feat-matt-koser.njk
@@ -16,8 +16,11 @@ tags:
 notes:
   - <a href="https://www.goodreads.com/review/show/5556557573">That All Shall Be Saved by David Bentley Hart</a>
   - <a href="https://www.goodreads.com/book/show/503501.Hell_Under_Fire">Hell Under Fire</a>
-  - <a href="https://youtu.be/X-DfzRSLFP8">YouTube: 3 Christian Views of Hell (Preston Sprinkle)</a>
-  - <a href="https://youtu.be/nemKBJoCoKI">YouTube: The Annihilation View of Hell (Preston Sprinkle)</a>
   - <a href="https://www.goodreads.com/user/show/110341498-matt-koser">Follow Matt on Goodreads</a>
   - <a href="https://www.goodreads.com/user/show/110341498-matt-koser">Follow Brian on Goodreads</a>
+youtubeNotes:
+  - id: X-DfzRSLFP8
+    caption: 3 Christian Views of Hell (Preston Sprinkle)
+  - id: nemKBJoCoKI
+    caption: The Annihilation View of Hell (Preston Sprinkle)
 ---
