--- a/feed.njk
+++ b/feed.njk
@@ -27,7 +27,7 @@ date: Last Modified
 			<title>{{ metadata.podcast_name }}</title>
 			<link>{{ metadata.site_url }}</link>
 		</image>
-		<itunes:subtitle>Top Ten Lists of Everything</itunes:subtitle>
+		<itunes:subtitle>Top Ten Lists about Everything</itunes:subtitle>
 		<itunes:summary>{{metadata.site_description}}</itunes:summary>
 		<itunes:keywords>Koser, Top, Ten, List, Brian, Melissa</itunes:keywords>
 		<itunes:category text="Arts">
