--- a/episodes/176-in-the-beginning-dog-a-comedic-reading-of-pd-eastmans-go-dog-go.njk
+++ b/episodes/176-in-the-beginning-dog-a-comedic-reading-of-pd-eastmans-go-dog-go.njk
@@ -2,7 +2,7 @@
 layout: episode
 number: 176
 title: "In the Beginning, Dog: A Comedic Reading of P. D. Eastman's 'Go, Dog. Go!'"
-description: 
+description: Brian puts on the piercing spectacles of literay criticism and reveals the true meaning of P. D. Eastman's masterpiece 'Go, Dog. Go!'
 date: 2024-06-05
 hosts:
   - Brian
