--- a/episodes/176-in-the-beginning-dog-a-comedic-reading-of-pd-eastmans-go-dog-go.njk
+++ b/episodes/176-in-the-beginning-dog-a-comedic-reading-of-pd-eastmans-go-dog-go.njk
@@ -12,6 +12,7 @@ duration: '0:47:44'
 tags:
   - episodes
   - books
+  - featured
 
 notes:
   - <a href="https://www.facebook.com/thescifichristian/posts/pfbid0rTfS2yyirjgNBbkj8e7RnQ1CJB6MgKXVcWeVYDVXEkoXjazauypskNMsCT8KaXS5l?__cft__[0]=AZXWmD_rp82klrFWNH-kO2NUXLflUAYGDZ8eo1clXPTn4TnpXj0aaFxhWiMo5AOklUAzcmLTNHs7CJkswhEakBvxfO46-3R2qtbXW3cxC2QY3Kf8AmnA3apNECUel99bfJTBtai4II5l5Y1721wuSStiJU03EzpmGzzal9WngvlCDygc2Atzd_yO3i7YebH3lYqtGjXh3sllG_6iwNgZj_oL&__tn__=%2CO%2CP-R">The Sci-Fi Christian Extra - Episode 179 - Deep Dive on Dog</a>
