--- a/episodes/184-goals-2025.njk
+++ b/episodes/184-goals-2025.njk
@@ -39,12 +39,12 @@ melissa:
     - Funeral plan
     - Garden, compost, chickens
     - Finish painting the kitchen
+notes:
+  - <a href="https://koser.us">Kodex</a>, our family website
+  - <a href="https://koser.us/articles/2024/12/19/1/christmas-letter-2024/">Christmas Letter 2024</a>
+  - <a href="https://koser.us/articles/2024/05/22/1/for-the-sake-of-arguments/">For the Sake of Arguments</a>, Brian's article about chapter heading summaries
+  - <a href="https://incipit.koser.us/">Incipit</a>, the list of Brian's favorite first lines from books
+  - <a href="https://www.youtube.com/watch?v=p8W5GCnqT_M">The History of Slipping on Banana Peels</a>, which Brian has not finished and Melissa has not started at time of posting
 ---
 {% list brian %}
 {% list melissa %}
-
-- [Kodex](https://koser.us), our family website
-- [Christmas Letter 2024](https://koser.us/articles/2024/12/19/1/christmas-letter-2024/)
-- [For the Sake of Arguments](https://koser.us/articles/2024/05/22/1/for-the-sake-of-arguments/), Brian's article about chapter heading summaries
-- [Incipit](https://incipit.koser.us/), the list of Brian's favorite first lines from books
-- [The History of Slipping on Banana Peels](https://www.youtube.com/watch?v=p8W5GCnqT_M), which Brian has not finished and Melissa has not started at time of posting
