--- a/episodes/190-2025-preview-beatles-bugs-bunny-botticelli.njk
+++ b/episodes/190-2025-preview-beatles-bugs-bunny-botticelli.njk
@@ -2,7 +2,7 @@
 layout: episode
 number: 190
 title: "2025 Preview: Beatles, Bugs Bunny, and Botticelli"
-description: Brian and Melissa preview a few upcoming episodes.s
+description: Brian and Melissa preview a few upcoming episodes.
 date: 2025-05-16
 hosts:
   - Brian
