--- a/episodes/191-i-was-wrong-about-ai.njk
+++ b/episodes/191-i-was-wrong-about-ai.njk
@@ -13,3 +13,18 @@ tags:
   - episodes
   - ai
 ---
+
+To atone for my clickbait title, here are 10 of current thoughts on AI/LLMs:
+
+1. It's very impressive software, unbelievable how well it works
+2. It's not sentient and never will be (not improving exponentially)
+3. It's not even autonomous. There will always be a human needed at the start (prompts, direction) and end (correcting mistakes)
+4. The only way 2 and 3 are wrong is if this software summons demons. There is an above zero chance it's demons
+5. Either way, I'm avoiding it and so should you
+6. AI is not inevitable, you do not have to use it
+7. It's a disaster for humanity if AI works well
+8. It's a disaster if AI doesn't work well but people continue to pretend that it does
+9. The past three years of failed predictions by alarmists have numbed people to the actual detrimental effects
+10. AI doesn't create new problems, it exacerbates existing problems
+
+Not to mention the power costs (my main problem with cryptocurrencies) and content theft
