--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -27,7 +27,7 @@
         <meta property="og:image:width" content="1080" />
         <meta property="og:image:height" content="644" />
 
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="summary">
         <meta name="twitter:creator" content="@bmkoser">
         <meta name="twitter:title" content="{%- if number != null %}№ {{ number}} {{title}} {%- elif title != null -%}{{ title }} {%- else -%} {{metadata.podcast_name}} {%- endif %}">
         <meta name="twitter:description" content="{% if description -%} {{ description }} {%- else -%} {{metadata.site_description}} {%- endif %}">
