--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -32,6 +32,8 @@
         <meta name="twitter:title" content="{%- if number != null %}№ {{ number}} {{title}} {%- elif title != null -%}{{ title }} {%- else -%} {{metadata.podcast_name}} {%- endif %}">
         <meta name="twitter:description" content="{% if description -%} {{ description }} {%- else -%} {{metadata.site_description}} {%- endif %}">
         <meta name="twitter:image" content="{{ metadata.twitter_image }}">
+        <meta property="twitter:image:src" content="{{ metadata.twitter_image }}">
+/>
     </head>
     <body>
         {% siteHeader name %}
