--- a/episodes/186-chosen-in-christ-feat-matt-koser.njk
+++ b/episodes/186-chosen-in-christ-feat-matt-koser.njk
@@ -9,11 +9,10 @@ hosts:
   - Matt Koser
 bytes: 27_890_643
 duration: '0:58:06'
+video:
+  id: 7cyH8zYvKR4
 tags:
   - episodes
   - theology
-
-youtubeNotes:
-  - id: 7cyH8zYvKR4
-    caption: For the first time, this show is available on YouTube
 ---
+For the first time, this show is available on YouTube
