--- a/episodes/193-a-baptist-catholic-dialog-pt-1-feat-judd-baroff.njk
+++ b/episodes/193-a-baptist-catholic-dialog-pt-1-feat-judd-baroff.njk
@@ -9,6 +9,8 @@ hosts:
   - Judd Baroff
 bytes: 62_489_713
 duration: '1:26:47'
+video:
+  id: FG4jtcDqwXM
 tags:
   - episodes
   - theology
@@ -16,7 +18,4 @@ tags:
 notes:
   - 'Judd recommended <i><a href="https://www.goodreads.com/book/show/152601742-this-is-my-body">This is My Body: A Call to Eucharistic Revival</a></i> by Bishop Robert Barron'
   - "Brian referenced Cardinal Ratzinger's letter to the Lutheran Bishop Hanselman in March 1993: \"Besides, I reckon as one of the important results of ecumenical conversations particularly the realization that the question of the Eucharist cannot be restricted to the problem of 'validity'. Even a theology along the lines of the concept of succession, as is in force in the Catholic and in the Orthodox Church, should in no way deny the saving presence of the Lord in the Evangelical Lord's Supper.\" In this context, \"Evangelical\" means \"Lutheran\"."
-youtubeNotes:
-  - id: FG4jtcDqwXM
-    caption: Video available on YouTube
 ---
