--- a/about.njk
+++ b/about.njk
@@ -3,16 +3,17 @@ layout: site
 brian:
     host: Brian
     list:
-        - I'm compelled to rank everything. And I like to talk.
-        - Professional software developer. I build websites professionally and as a hobby.
-        - Other hobbies include reading and playing modern board games.
-        - <a href="https://koser.us/brian">Personal website</a>
+        - Compelled to make lists and press them upon strangers.
+        - Chronic overthinker.
+        - Other hobbies include reading, running, and dabbling.
+        - Once assembled some monkey bars in our backyard; ended up with a bunch of drunk monkeys.
+        - <a href="https://koser.us">Personal website</a>
+        - Of all the holidays he's invented, the most successful is McNoodlehoffer Day.
         - Tracked <a href="/episodes/040-1000-books">every book that I've read</a> since I was 8.
-        - If I ever go on the run in Mexico, my alias will be "Jorge Curioso".
-        - "Favorite episode: <a href='/episodes/064-great-songs'>№ 64 Great Songs</a>"
-        - "Favorite color: <span style='color:#006b9f;font-weight:bold;'>teal</span>"
-        - "Favorite punctuation mark: ?"
+        - If ever on the run in Mexico, will use the alias "Jorge Curioso".
         - "Favorite emoji: ⚗️"
+        - "Favorite episode: <a href='/episodes/176-in-the-beginning-dog-a-comedic-reading-of-pd-eastmans-go-dog-go'>№ 176 In the Beginning, Dog: A Comedic Reading of P. D. Eastman's 'Go, Dog. Go!'</a>"
+        
 melissa:
     host: Melissa
     list:
@@ -20,7 +21,7 @@ melissa:
         - Hobbies include reading, board games, cooking,  and the occasional short-lived craft.
         - I play the piano, accordion, percussion; want to learn harp.
         - I aspire to be a writer and a masseuse, but mostly a writer.
-        - <a href="https://koser.us/melissa">I wrote some things here</a>
+        - <a href="https://koser.us">I wrote some things here</a>
         - It's been one of those lives.
         - My hair changes between blonde, brown, and red with sun and age.
         - I would exercise, but it's just too darn tiring.
