--- a/episodes/198-films-2025.njk
+++ b/episodes/198-films-2025.njk
@@ -60,7 +60,7 @@ melissa:
     - title: Escape from New York
       slug: escape-from-new-york
     - title: Flow
-      slug: 
+      slug: flow-2024
 notes:
   - <a href="https://letterboxd.com/bkoser/year/2025/">Brian’s 2025 in review on Letterboxd</a>
   - <a href="https://letterboxd.com/mkoser/">Melissa on Letterboxd</a>
