--- a/css/site.css
+++ b/css/site.css
@@ -90,6 +90,23 @@
     font-style: italic; 
 }
 
+@font-face {
+  font-family: 'Courier Prime';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/l/font?kit=u-4k0q2lgwslOqpF_6gQ8kELY7pMf-LNpMnYD06yNq9Gqaw&skey=5667eee1d647af21&v=v11) format('woff2');
+}
+
+@font-face {
+  font-family: 'Lobster';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/lobster/v32/neILzCirqoswsqX9zoKmMw.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 
 
 
@@ -101,14 +118,18 @@
 :root {
     /* 
         Acceptable WCAG contrast ratio combos:
-            - black and primary
-            - black and secondary
-            - black and white
+            - navy and red
+            - navy and blue
+            - navy and yellow
     */
     --color-primary: hsl(14, 97%, 52%);
     --color-secondary: hsl(198, 76%, 52%);
     --color-black: hsl(245, 90%, 17%);
-    --color-white: hsl(53, 95%, 74%);
+    --color-white: white;
+    --color-blue: hsl(198, 76%, 52%);
+    --color-navy: hsl(245, 90%, 17%);
+    --color-red: hsl(14, 97%, 52%);
+    --color-yellow: hsl(53, 95%, 74%);
 }
 
 
@@ -288,7 +309,6 @@ img {
 }
 
 audio {
-    background-color: var(--color-primary);
     border-radius: 10px;
     width: 100%;
 }
@@ -661,6 +681,119 @@ kbd kbd {
 
 
 
+/*
+    MEDIA
+*/
+.media-buttons {
+    cursor: pointer;
+}
+
+
+
+
+
+/*
+    POSTER
+*/
+.poster {
+    background-color: var(--color-blue);
+    max-width: 600px;
+    border: solid 16px var(--color-navy);
+}
+
+.poster .hosts {
+    list-style: none;
+    font-size: 3em;
+    color: var(--color-yellow);
+    text-align: right;
+    margin-bottom: 0;
+    margin-left: 8rem;
+    position: relative;
+    z-index: 2;
+}
+
+.poster .hosts.guests {
+    margin-left: 0;
+}
+
+.poster .hosts .first {
+    font-family: Lobster, script;
+}
+
+.poster .hosts .last {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.poster .host svg {
+    width: 100%;
+}
+
+.poster .host + .host {
+    margin-top: -2.5em;
+}
+
+.poster .number {
+    margin-top: -7em;
+    position: relative;
+    z-index: 1;
+}
+
+.poster .number svg text {
+    font-size: 60vw;
+    font-family: "Courier Prime", monospace;
+    fill: var(--color-white);
+    letter-spacing: -0.15em;
+}
+
+@media screen and (min-width: 630px) {
+    .poster .number svg text {
+        font-size: 378px;
+    }
+}
+
+.poster .title {
+    font-family: Lobster, cursive;
+    margin: -3em 0 4em 3em;
+    transform: skew(0, -15deg);
+    line-height: 1;
+    position: relative;
+    z-index: 3;
+}
+
+.poster .title .in {
+    padding-left: 1em;
+}
+
+.poster .title-text {
+  font-size: 3em;
+  font-family: Lobster, Impact;
+}
+
+.poster .title-text:first-child{
+  -webkit-text-stroke: 0.03em var(--color-yellow);
+  -webkit-text-fill-color: var(--color-red);
+}
+
+.poster .title-text:last-child{
+  color: var(--color-red);
+}
+
+.poster .contents {
+    text-align: center;
+}
+
+.poster .credits {
+    font-size: 70%;
+    margin-top: 2em;
+    padding: 0.3em;
+}
+
+
+
+
+
+
 
 /*
     EPISODE BLOCK, EPISODE CARD
@@ -723,7 +856,6 @@ kbd kbd {
 .episode-card .title {
     white-space: pre-wrap;
 }
-
 
 
 
@@ -805,11 +937,11 @@ kbd kbd {
 
 .post audio,
 .post .description {
-    margin-top: 2.6rem;
+    margin-top: 2rem;
 }
 
 .post .spoilers summary + ol {
-    margin-top: 2.6rem;
+    margin-top: 2rem;
 }
 
 .post .video-embed-container {
@@ -1038,10 +1170,6 @@ kbd kbd {
 
     .site-header .masthead {
         font-size: 5vw;
-    }
-
-    .site-header.layout-site .site-logo {
-        max-width: initial;
     }
 
 
