--- a/episodes/002-musicals.njk
+++ b/episodes/002-musicals.njk
@@ -5,8 +5,8 @@ title: Musicals
 description: Melissa and Brian each pick their top ten movie musicals.
 date: 2016-06-02
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 16643378
 duration: '0:34:40'
 tags:
