--- a/episodes/004-villains.njk
+++ b/episodes/004-villains.njk
@@ -5,8 +5,8 @@ title: Villains
 description: Melissa and Brian discuss the ten villains they love to hate (or just plain hate).
 date: 2016-06-28
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 21954560
 duration: '0:45:44'
 tags:
