--- a/episodes/005-bible-stories-that-make-us-laugh.njk
+++ b/episodes/005-bible-stories-that-make-us-laugh.njk
@@ -5,8 +5,8 @@ title: Bible Stories that Make Us Laugh
 description: Melissa and Brian take turns telling stories from the Bible that make them laugh.
 date: 2016-07-07
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 19841024
 duration: '0:41:19'
 tags:
