--- a/episodes/006-veggietales-songs.njk
+++ b/episodes/006-veggietales-songs.njk
@@ -5,8 +5,8 @@ title: Veggietales Songs
 description: Melissa and Brian tell (and maybe sing a little of) their favorite Veggietales songs.
 date: 2016-07-17
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 12685312
 duration: '0:26:25'
 tags:
