--- a/episodes/007-recommendations-for-my-spouse.njk
+++ b/episodes/007-recommendations-for-my-spouse.njk
@@ -5,8 +5,8 @@ title: Recommendations for My Spouse
 description: Brian and Melissa find ten books, movies, and TV shows that they think each other would like.
 date: 2016-07-22
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 16134325
 duration: '0:33:36'
 tags:
