--- a/episodes/008-actors.njk
+++ b/episodes/008-actors.njk
@@ -5,8 +5,8 @@ title: Actors
 description: Melissa and Brian discuss which actors work they're most interested in watching.
 date: 2016-07-29
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 23970619
 duration: '0:49:56'
 tags:
