--- a/episodes/009-accomplishments.njk
+++ b/episodes/009-accomplishments.njk
@@ -5,8 +5,8 @@ title: Accomplishments
 description: Brian and Melissa list ten goals they’d like to accomplish. 
 date: 2016-08-05
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 22119904
 duration: '0:46:05'
 tags:
