--- a/episodes/010-worst-things-ive-ever-ingested.njk
+++ b/episodes/010-worst-things-ive-ever-ingested.njk
@@ -5,8 +5,8 @@ title: Worst Things I’ve Ever Ingested
 description: Melissa and Brian each tell the ten worst things they’ve swallowed.
 date: 2016-08-12
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 21829647
 duration: '0:45:28'
 tags:
