--- a/episodes/011-authors-ive-never-read-but-want-to.njk
+++ b/episodes/011-authors-ive-never-read-but-want-to.njk
@@ -5,8 +5,8 @@ title: Authors I’ve Never Read, But Want To
 description: Brian and Melissa list ten authors who work they’re excited to check out. 
 date: 2016-08-19
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 18119845
 duration: '0:37:45'
 tags:
