--- a/episodes/012-improvements-on-idioms-and-proverbs.njk
+++ b/episodes/012-improvements-on-idioms-and-proverbs.njk
@@ -5,8 +5,8 @@ title: Improvements on Idioms and Proverbs
 description: Melissa and Brian make their own personal improvements to ten common English idioms and proverbs. 
 date: 2016-08-26
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 13080721
 duration: '0:27:15'
 tags:
