--- a/episodes/013-top-ten-lists-well-never-do.njk
+++ b/episodes/013-top-ten-lists-well-never-do.njk
@@ -5,8 +5,8 @@ title: Top Ten Lists We’ll Never Do
 description: For unlucky number 13, Brian and Melissa reveal the top ten lists that will never appear on the podcast.
 date: 2016-09-02
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 10636278
 duration: '0:22:09'
 tags:
