--- a/episodes/014-animals.njk
+++ b/episodes/014-animals.njk
@@ -5,8 +5,8 @@ title: Animals
 description: Melissa and Brian list their favorite animals, with fun facts galore.
 date: 2016-09-08
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 27925141
 duration: '0:58:10'
 tags:
