--- a/episodes/016-board-game-names.njk
+++ b/episodes/016-board-game-names.njk
@@ -5,8 +5,8 @@ title: Board Game Names
 description: Melissa and Brian discuss their favorite board game names. The word “evocative” is used a lot.
 date: 2016-10-07
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 25789000
 duration: '0:44:01'
 tags:
