--- a/episodes/017-animated-movies.njk
+++ b/episodes/017-animated-movies.njk
@@ -5,8 +5,8 @@ title: Animated Movies
 description: Brian and Melissa list their favorite animated movies.
 date: 2016-10-14
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 33451150
 duration: '0:55:45'
 tags:
