--- a/episodes/018-hymns.njk
+++ b/episodes/018-hymns.njk
@@ -5,8 +5,8 @@ title: Hymns
 description: Melissa and Brian sing their ten favorite Christian hymns.
 date: 2016-10-31
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 36594969
 duration: '1:00:59'
 tags:
