--- a/episodes/019-memories.njk
+++ b/episodes/019-memories.njk
@@ -5,8 +5,8 @@ title: Memories
 description: Brian and Melissa remember their favorite memories.
 date: 2016-11-04
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 37582401
 duration: '1:02:38'
 tags:
