--- a/episodes/020-fictional-creatures.njk
+++ b/episodes/020-fictional-creatures.njk
@@ -5,9 +5,10 @@ title: Fictional Creatures
 description: Brian and Melissa are joined by Brian’s brother Luke as they discuss their favorite fictional creatures.
 date: 2016-11-11
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
   - Luke Koser
+guests: true
 bytes: 45897449
 duration: '1:16:29'
 tags:
