--- a/episodes/021-bucket-list-experiences.njk
+++ b/episodes/021-bucket-list-experiences.njk
@@ -5,8 +5,8 @@ title: Bucket List Experiences
 description: Melissa and Brian share the top ten things they’d like to experience.
 date: 2016-11-18
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 26327820
 duration: '0:43:53'
 tags:
