--- a/episodes/022-fast-food-restaurants.njk
+++ b/episodes/022-fast-food-restaurants.njk
@@ -5,8 +5,8 @@ title: Fast Food Restaurants
 description: Brian and Melissa salivate over their favorite fast food restaurants.
 date: 2016-11-25
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 42532618
 duration: '1:10:53'
 tags:
