--- a/episodes/023-comic-book-characters.njk
+++ b/episodes/023-comic-book-characters.njk
@@ -5,9 +5,10 @@ title: Comic Book Characters
 description: Melissa, Brian, and Zach Koser discuss their favorite characters from comic books.
 date: 2016-12-02
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
   - Zach Koser
+guests: true
 bytes: 45866626
 duration: '1:16:26'
 tags:
