--- a/episodes/024-sci-fi-fantasy-characters.njk
+++ b/episodes/024-sci-fi-fantasy-characters.njk
@@ -5,8 +5,8 @@ title: Sci-Fi and Fantasy Characters
 description: Brian and Melissa talk about their favorite characters from speculative fiction.
 date: 2016-12-09
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 31066696
 duration: '0:51:46'
 tags:
