--- a/episodes/025-advice-after-five-years-of-marriage.njk
+++ b/episodes/025-advice-after-five-years-of-marriage.njk
@@ -5,8 +5,8 @@ title: Advice after Five Years of Marriage
 description: Melissa and Brian give ten pieces of marriage advice after celebrating their fifth wedding anniversary.
 date: 2016-12-17
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 30247244
 duration: '0:50:24'
 tags:
