--- a/episodes/027-movies-2016.njk
+++ b/episodes/027-movies-2016.njk
@@ -5,8 +5,8 @@ title: Movies 2016
 description: Melissa and Brian discuss their favorite movies that they watched for the first time in 2016.
 date: 2017-01-14
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 37987041
 duration: '1:03:18'
 tags:
