--- a/episodes/028-books-2016.njk
+++ b/episodes/028-books-2016.njk
@@ -5,8 +5,8 @@ title: Books 2016
 description: Brian and Melissa discuss their favorite books that they read for the first time in 2016.
 date: 2017-01-20
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 60761897
 duration: '1:41:16'
 tags:
