--- a/episodes/029-board-games-2016.njk
+++ b/episodes/029-board-games-2016.njk
@@ -5,9 +5,10 @@ title: Board Games 2016
 description: Melissa, Brian, and special guest Jay Champagne discuss their favorite board games as of the end of 2016.
 date: 2017-01-29
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
   - Jay Champagne
+guests: true
 bytes: 69182213
 duration: '1:55:18'
 tags:
