--- a/episodes/030-animated-movie-characters.njk
+++ b/episodes/030-animated-movie-characters.njk
@@ -5,9 +5,10 @@ title: Animated Movie Characters
 description: Brian, Melissa, and special guest Megan Koser discuss their favorite characters from animated movies.
 date: 2017-02-03
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
   - Megan Koser
+guests: true
 bytes: 48576834
 duration: '1:20:57'
 tags:
