--- a/episodes/031-bible-characters.njk
+++ b/episodes/031-bible-characters.njk
@@ -5,8 +5,8 @@ title: Bible Characters
 description: Brian and Melissa discuss their favorite Bible characters.
 date: 2017-02-11
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 48576834
 duration: '1:07:27'
 tags:
