--- a/episodes/032-moral-dilemmas.njk
+++ b/episodes/032-moral-dilemmas.njk
@@ -5,8 +5,8 @@ title: Moral Dilemmas
 description: Brian submits ten moral dilemmas to Melissa.
 date: 2017-02-18
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 29832256
 duration: '0:49:42'
 tags:
