--- a/episodes/033-flavor-combos.njk
+++ b/episodes/033-flavor-combos.njk
@@ -5,8 +5,8 @@ title: Flavor Combos
 description: Melissa and Brian list their favorite food and flavor combinations.
 date: 2017-02-25
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 21038014
 duration: '0:35:04'
 tags:
