--- a/episodes/034-reasons-lost-is-great.njk
+++ b/episodes/034-reasons-lost-is-great.njk
@@ -5,8 +5,8 @@ title: Reasons LOST is Great
 description: Brian and Melissa discuss the television show LOST, with full spoilers.
 date: 2017-03-03
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 43154071
 duration: '1:11:55'
 tags:
