--- a/episodes/035-lost-characters.njk
+++ b/episodes/035-lost-characters.njk
@@ -5,8 +5,8 @@ title: LOST Characters
 description: Melissa and Brian list their favorite characters from the TV show LOST.
 date: 2017-03-11
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 52059730
 duration: '1:26:46'
 tags:
