--- a/episodes/036-lost-episodes.njk
+++ b/episodes/036-lost-episodes.njk
@@ -5,8 +5,8 @@ title: LOST Episodes
 description: Brian and Melissa choose their favorite episodes from the TV show LOST.
 date: 2017-03-18
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 62675369
 duration: '1:44:27'
 tags:
