--- a/episodes/037-lost-moments.njk
+++ b/episodes/037-lost-moments.njk
@@ -5,8 +5,8 @@ title: LOST Moments
 description: Melissa and Brian discuss their favorite moments from the TV show LOST.
 date: 2017-03-25
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 32193344
 duration: '0:53:39'
 tags:
