--- a/episodes/038-grunts.njk
+++ b/episodes/038-grunts.njk
@@ -5,8 +5,8 @@ title: Grunts
 description: Brian shares his ten favorite grunts with Melissa and the world.
 date: 2017-04-01
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 2813420
 duration: '0:04:41'
 tags:
