--- a/episodes/039-sports.njk
+++ b/episodes/039-sports.njk
@@ -5,8 +5,9 @@ title: Sports
 description: Brian and guest host Matt Koser discuss their favorite sports to play and watch.
 date: 2017-04-07
 hosts:
-  - Brian
+  - Brian Koser
   - Matt Koser
+guests: true
 bytes: 62028831
 duration: '1:43:23'
 tags:
