--- a/episodes/040-1000-books.njk
+++ b/episodes/040-1000-books.njk
@@ -5,8 +5,8 @@ title: 1000 Books
 description: Brian met his 1000 book goal, so he discusses the books he's read, highlighting every hundredth book.
 date: 2017-04-15
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 27451595
 duration: '0:45:45'
 tags: 
