--- a/episodes/041-movie-tv-moments-that-made-me-cry.njk
+++ b/episodes/041-movie-tv-moments-that-made-me-cry.njk
@@ -5,8 +5,8 @@ title: Movie and TV Moments that Made Me Cry
 description: Melissa talks about ten movie and TV moments that made her cry. Brian talks about ten movie and TV moments that were sad but didn't necessarily make him cry.
 date: 2017-04-22
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 29204957
 duration: '0:48:40'
 tags:
