--- a/episodes/042-financial-pointers.njk
+++ b/episodes/042-financial-pointers.njk
@@ -5,8 +5,8 @@ title: Financial Pointers
 description: Brian presents financial advice for college graduates.
 date: 2017-04-29
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 48578917
 duration: '1:20:58'
 tags:
