--- a/episodes/043-kitchen-essentials.njk
+++ b/episodes/043-kitchen-essentials.njk
@@ -5,8 +5,8 @@ title: Kitchen Essentials
 description: Melissa shares her essential kitchen items for recent college graduates.
 date: 2017-05-07
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 21030966
 duration: '0:35:02'
 tags:
