--- a/episodes/044-pop-culture-quotes.njk
+++ b/episodes/044-pop-culture-quotes.njk
@@ -5,8 +5,8 @@ title: Pop Culture Quotes
 description: Brian and Melissa share the pop cultures lines that they most often quote.
 date: 2017-05-14
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 20020550
 duration: '0:33:22'
 tags:
