--- a/episodes/045-super-characteristics-of-my-spouse.njk
+++ b/episodes/045-super-characteristics-of-my-spouse.njk
@@ -5,8 +5,8 @@ title: Super Characteristics of My Spouse
 description: Melissa and Brian imagine what each other would be like as a superhero or supervillain.
 date: 2017-05-26
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 12537007
 duration: '0:20:53'
 tags:
