--- a/episodes/046-breakfast-cereals.njk
+++ b/episodes/046-breakfast-cereals.njk
@@ -5,8 +5,8 @@ title: Breakfast Cereals
 description: Brian and Melissa discuss the breakfast cereals they find the tastiest.
 date: 2017-05-27
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 34767716
 duration: '0:57:57'
 tags:
