--- a/episodes/047-bible-verses.njk
+++ b/episodes/047-bible-verses.njk
@@ -5,8 +5,8 @@ title: Bible Verses
 description: Melissa and Brian list their personal favorite Bible verses.
 date: 2017-06-03
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 32433670
 duration: '0:54:03'
 tags:
