--- a/episodes/048-fictional-world-characteristics.njk
+++ b/episodes/048-fictional-world-characteristics.njk
@@ -5,8 +5,8 @@ title: Fictional World Characteristics
 description: Brian and Melissa talk about what things hook them into the world of a story.
 date: 2017-06-11
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 34432579
 duration: '0:57:23'
 tags:
