--- a/episodes/049-things-every-human-should-do.njk
+++ b/episodes/049-things-every-human-should-do.njk
@@ -5,8 +5,8 @@ title: Things Every Human Should Do
 description: Melissa and Brian discuss what they think every human should do (yes, it’s very broad).
 date: 2017-06-17
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 41535531
 duration: '1:09:13'
 tags:
