--- a/episodes/050-questions-from-the-listeners.njk
+++ b/episodes/050-questions-from-the-listeners.njk
@@ -5,8 +5,8 @@ title: Questions from the Listeners
 description: Brian and Melissa answer questions from you, the listeners.
 date: 2017-06-23
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 35425490
 duration: '0:59:02'
 tags:
