--- a/episodes/051-games-to-teach-children.njk
+++ b/episodes/051-games-to-teach-children.njk
@@ -5,8 +5,8 @@ title: Games to Teach Children
 description: Brian and Melissa list some games that will teach children (or anyone!) some important skills.
 date: 2017-07-01
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 33548326
 duration: '0:55:55'
 tags:
