--- a/episodes/052-things-not-to-say-to-your-wife.njk
+++ b/episodes/052-things-not-to-say-to-your-wife.njk
@@ -5,10 +5,11 @@ title: Things Not to Say to Your Wife
 description: Melissa and Brian are joined by Aaron and Rachel Smith to discuss some of the worst things you can say to your spouse.
 date: 2017-07-16
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
   - Aaron Smith
   - Rachel Smith
+guests: true
 bytes: 35129003
 duration: '0:58:33'
 tags:
