--- a/episodes/197-books-2025.njk
+++ b/episodes/197-books-2025.njk
@@ -5,8 +5,8 @@ title: Books 2025
 description: Brian and Melissa share their favorite new reads of 2025.
 date: 2026-01-16
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 53_220_120
 duration: '1:08:31'
 tags:
