--- a/episodes/001-lamest-superheroes.njk
+++ b/episodes/001-lamest-superheroes.njk
@@ -5,8 +5,8 @@ title: Lamest Superheroes
 description: This week Brian and Melissa each invent ten lame superheroes with lame superpowers. These characters would be right at home on The Tick or Mystery Men. 
 date: 2016-06-02
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 13373066
 duration: '0:27:51'
 tags:
