--- a/episodes/003-podcasts.njk
+++ b/episodes/003-podcasts.njk
@@ -5,8 +5,8 @@ title: Podcasts
 description: Brian and Melissa talk through their top ten podcasts.
 date: 2016-06-17
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 17743238
 duration: '0:36:58'
 tags:
