--- a/episodes/015-catchphrases-of-shane.njk
+++ b/episodes/015-catchphrases-of-shane.njk
@@ -5,8 +5,8 @@ title: Catchphrases of Shane
 description: Brian and Melissa reveal their favorite catchphrases of their friend Shane.
 date: 2016-09-15
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 6793138
 duration: '0:14:08'
 tags:
