--- a/episodes/026-new-years-resolutions-2017.njk
+++ b/episodes/026-new-years-resolutions-2017.njk
@@ -5,8 +5,8 @@ title: New Year’s Resolutions 2017
 description: 
 date: 2017-01-06
 hosts:
-  - Brian
-  - Melissa
+  - Brian Koser
+  - Melissa Koser
 bytes: 29325374
 duration: '0:48:52'
 tags:
